# amphora

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: release.yml
amphora/: __init__.py  __main__.py  application.py  config.py  mpris.py  notifications.py  player.py  tasks.py
amphora/pandora/: __init__.py  client.py  crypt.py  models.py
amphora/ui/: __init__.py  login.py  mini_view.py  player_view.py  style.css  window.py
data/: net.kndy.Amphora.desktop  net.kndy.Amphora.metainfo.xml
data/screenshots/: .gitkeep
flatpak/: build-flatpak.sh  net.kndy.Amphora.yaml  python3-deps.yaml
tests/: run.py  test_pandora.py
